--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.8
     - name: Update pip
@@ -20,7 +20,8 @@ jobs:
     - name: Install project dependencies
       run: |
         pip install moto[all]
+        pip install pytest
         pip install https://github.com/getsentry/responses/archive/refs/heads/master.zip
     - name: Test
       run: |
-        pytest -sv test
+        pytest -sv test/test.py
